fixed img stretching screen

--- a/styles/scss/components/register.scss
+++ b/styles/scss/components/register.scss
@@ -23,7 +23,6 @@
 }
 
 .group11 {
-  right: 91%;
   object-fit: cover;
 }
 
